fix ios link not wrapping

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -6,6 +6,13 @@ body {
   min-height: 100vh;
 }
 
+a:not(.anchor-link) {
+  word-break: break-all; /* iOS Safari needs this specifically */
+  overflow-wrap: break-word; /* Fallback for other browsers */
+  hyphens: auto;
+  -webkit-hyphens: auto; /* Optional: adds hyphens on iOS */
+}
+
 // =============================================================================
 // Footer
 // =============================================================================
@@ -63,7 +70,7 @@ body {
 }
 
 // =============================================================================
-// Anchor Links
+// Auto anchor Links
 // =============================================================================
 
 .anchor-link {
